--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,1 @@
-{
-  "api": "1.0.0",
-  "editorType": [
-    "figma"
-  ],
-  "id": "1290624141153825642",
-  "name": "Green Design System",
-  "main": "build/main.js",
-  "ui": "build/ui.js",
-  "networkAccess": {
-    "allowedDomains": [
-      "https://seb.io",
-      "https://api.seb.io"
-    ]
-  }
-}
+{"api":"1.0.0","editorType":["figma"],"id":"1290624141153825642","name":"Green Design System","main":"build/main.js","ui":"build/ui.js","networkAccess":{"allowedDomains":["https://seb.io","https://api.seb.io"]}}
